# sources

./: .gitignore  index.html  index.json  index.min.json
.github/workflows/: build.yml
assets/: index-B1xKzcJq.css  index-DNdRKlEi.js
plugins/anikoto/: Cargo.toml  manifest.json
plugins/anikoto/src/: lib.rs  megaplay.rs
plugins/animekai/: Cargo.toml  manifest.json
plugins/animekai/src/: lib.rs
plugins/asurascans/: Cargo.toml  manifest.json
plugins/asurascans/src/: helpers.rs  lib.rs
plugins/atsumaru/: Cargo.toml  manifest.json
plugins/atsumaru/src/: lib.rs  models.rs
plugins/comix/: Cargo.toml  manifest.json
plugins/comix/src/: hash.rs  helpers.rs  lib.rs  models.rs  settings.rs  web.rs
plugins/luacomics/: Cargo.toml  manifest.json
plugins/luacomics/src/: lib.rs  models.rs  test_de.rs
plugins/mangafire/: Cargo.toml  manifest.json
plugins/mangafire/src/: lib.rs  vrf.rs
plugins/novel-fire/: Cargo.toml  manifest.json
plugins/novel-fire/src/: lib.rs
plugins/violetscans/: Cargo.toml  manifest.json
plugins/violetscans/src/: lib.rs
web/: package-lock.json  package.json
web/src/: App.vue
