[package]
name = "animekai"
version = "0.1.0"
edition = "2024"

[dependencies]
ito-rs = { git = "https://github.com/itoapp/ito-rs" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
strip = true
