[package]
name = "comix"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ito-rs = { git = "https://github.com/itoapp/ito-rs" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
base64 = "0.22"
regex = "1.12.4"
urlencoding = "2.1.3"
